# pawn-ai

./: .env  .env.example  .env.local  .gitignore  ARCHITECTURE.md  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/(dashboard)/: layout.tsx
app/actions/: readGoldData.ts
app/data/: prediction-data.ts  ราคาทองประจำปี68.xlsx
backend/: app.module.ts  main.ts
backend/customers/: customers.controller.ts
backend/external-api/: BOT-API-SPECS.md  README.md  external-api.module.ts
backend/forfeited-assets/: forfeited-assets.controller.ts  forfeited-assets.module.ts
backend/gold-prices/: gold-prices.controller.ts  gold-prices.module.ts  gold-prices.service.spec.ts
backend/llm/: llm.controller.ts
backend/ml/: ml.controller.ts  (+1 more)
backend/python-predict/: QUICKSTART_TRENDS.md  README.md  main.py  pyproject.toml  requirements.txt
backend/python-predict/app/: config.py
backend/python-predict/app/api/: predictions.py  trends.py
backend/python-predict/app/schemas/: predictions.py  trends.py
backend/python-predict/app/services/: README_TRENDS.md  __init__.py  forfeited_service.py  trends_service.py
components/: exchange-rate-display.tsx  gold-prediction-display.tsx  gold-price-display.tsx  loan-rate-display.tsx  world-gold-price-display.tsx
frontend/: package.json
ml-service/: .env.example  MODEL_SELECTION.md  README.md  main.py  pyproject.toml
space api /: financial-institutions-holidays_1.0.1.json  loan-interest-rates-of-commercial-banks-percent-per-annum_2.0.0.json
src/: main.ts
(+129 files in other folders)
